# Q-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: app.rs  main.rs
src/api/: types.rs
src/data/: mod.rs  quran.rs  reference.rs
src/ui/: banner.rs  browser.rs  mod.rs  theme.rs
