[package]
name = "quran-cli"
version = "0.1.0"
edition = "2021"
description = "A beautiful Quran TUI for developers"
license = "MIT"

[[bin]]
name = "quran"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
tachyonfx = "0.9"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
confy = "0.6"
unicode-width = "0.2"
once_cell = "1"
unicode-bidi = "0.3"

[profile.release]
opt-level = "z"
lto = true
strip = true
